--- a/style.css
+++ b/style.css
@@ -2,4 +2,30 @@ body{
     display: flex;
     justify-content: center;
 }
-div
+.container{
+    margin-top: 100px;
+    width: 300px;
+    box-shadow: 0px 0px 20px 10px #6b6d6a;
+    padding: 50px;
+    border-radius: 30px;
+    text-align: center;
+}
+h1{
+    margin-bottom: 40px;
+}
+
+input{
+    border: none;
+    border-bottom: 1px solid black;
+    width: 50%;
+    margin-bottom: 20px;
+    outline: none;
+    padding: 10px;
+    text-align: center;
+    font-size: 30px;
+}
+
+button{
+    width: 100%;
+    height: 35px;
+}
