--- a/style.css
+++ b/style.css
@@ -28,4 +28,10 @@ input{
 button{
     width: 100%;
     height: 35px;
+    margin-top: 25px;
+    border-radius: 20px;
+    border: none;
+    background-color: blue;
+    color: white;
+    font-size: 20px;
 }
